# jsip-exchange

./: after.txt  before.txt
.claude/: settings.json
app/bots/src/: book_filler.ml  book_filler.mli  book_filler_sadat.ml  book_filler_sadat.mli  cancel_storm.ml  cancel_storm.mli  jsip_bots.ml  market_maker_bot_hansel.ml  market_maker_bot_hansel.mli  market_maker_bot_lijia.ml  market_maker_bot_lijia.mli  momentum_trader_hansel.mli  noise_trader_hansel.ml  noise_trader_hansel.mli  robyn_market_maker_bot.ml  robyn_market_maker_bot.mli  robyn_noise_trader.mli  slow_consumer.mli  spammer.ml  spammer.mli
app/bots/test/: bot_harness.ml  dune  test_book_filler_sadat.ml  test_bots.ml  test_cancel_storm.ml  test_market_maker_bot_hansel.ml  test_market_maker_bot_robyn.ml  test_momentum_trader_hansel.ml  test_noise_trader_hansel.ml  test_noise_trader_robyn.ml
app/dashboard/client/: dune
app/dashboard/client/controller/: controller.ml  controller.mli  dune
app/dashboard/client/src/: dune  jsip_dashboard.ml  jsip_dashboard.mli  styles.ml  view.ml  view.mli
app/dashboard/client/static/: index.html
app/dashboard/client/test/: dune  test_controller.ml
app/dashboard/server/: dune  main.ml
app/market_maker/src/: market_maker.ml  market_maker.mli
app/market_maker/test/: test_market_maker.ml
app/monitor/src/: event_log.ml
app/monitor/test/: test_controller.ml  test_event_log.ml
lib/dashboard_protocol/: dashboard_rpc.ml  dashboard_rpc.mli  dune  exchange_stats.ml  exchange_stats.mli
performance/src/: allocations.ml  jsip_exchange_perf_lib.ml  sequences.ml
(+70 files in other folders)
